cart layout on mobile fixed, swiper slider aded , infinite scrolling added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,3 +67,14 @@ html {
       }
 }
 
+
+.swiper-button-prev, .swiper-button-next{
+
+    color:#B9B9B9!important;
+}
+
+.swiper-button-prev::after, .swiper-button-next::after{
+    font-size: 30px!important;
+    font-weight: 700!important;
+
+}
